--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 Диссертация/Resources/Видео/Ресурсы/Intro.mov
 Диссертация/Resources/Видео/Ресурсы/Камера.mp4
 Диссертация/Resources/Видео/Ресурсы/Телефон.mov
+Диссертация/Презентация/Презентация Зонов Андрей 2 курс 13 группа
